@@ -1,6 +1,7 @@
 ﻿﻿[B]Changelog[/B]
 * Added: AT5 live stream (Fixes #1031)
 * Added: L1 live TV and Radio (See #1032)
+* Fixed: TV Rijnmond live TV (See #1032)
 
 [I]Previous changes[/I]
 * Fixed: TV Noord &amp; TV West main listings
